--- a/style.css
+++ b/style.css
@@ -469,8 +469,8 @@ iframe {
 
 
 #references{
-  padding: 3rem 2rem 0 2rem;
-  max-width: 500px;
+  padding: 3rem 0;
+  max-width: 1100px;
   margin: auto;
 }
 
